# captcha-solver

./: .gitignore  Dockerfile  README.md  app.py  captcha_solver_model.ipynb  captcha_solver_model_v2.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python_ci.yml
