[project]
name = "captcha-service"
version = "0.1.0"
description = "FastAPI service for CAPTCHA prediction"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.104.1",
  "starlette>=0.27.0",
  "uvicorn[standard]>=0.24.0",
  "tensorflow>=2.14.0",
  "pillow>=10.1.0",
  "numpy>=1.24.3,<3.0.0",  # Pin numpy to 1.x version
  "pydantic>=2.4.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
